ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - weatherapp.local
      secretName: weatherapp-ui-tls
  rules:
    - host: weatherapp.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ui-svc
              port: 
                number: 3000     
 





# openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout tls.key -out tls.crt -subj "/CN=weatherapp.local/0=weatherapp"
 
 
#  kubectl create secret tls weatherapp-ui-tls --cert=tls.crt --key=tls.key
